# virtual_band

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt
cmake/: cpm.cmake
plugin/: CMakeLists.txt
plugin/include/VirtualBand/: MidiListModel.h  MidiProcessor.h  MidiQueue.h  MidiTable.h  PluginEditor.h  PluginProcessor.h  VirtualBandPluginProcessor.h
plugin/source/: MidiListModel.cpp  MidiProcessor.cpp  MidiQueue.cpp  MidiTable.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
